<resources>
    <string name="app_name">DMarket Alert</string>
    <string name="history_text">History</string>
    <string name="notification_text">Notification</string>
    <string name="home_text">Home</string>
    <string name="settings_text">Settings</string>
    <string name="profile_text">Profile</string>
    <string name="search_hint">Search settings…</string>
    <string name="general_text_settings">General</string>
    <string name="language_text_settings">Language</string>
    <string name="english_text_settings">English</string>
    <string name="currency_text_settings">Currency</string>
    <string name="theme_text_settings">Theme</string>
    <string name="system_text_settings">System</string>
    <string name="reset_settings_text_settings">Reset settings</string>
    <string name="reset_text_settings">Reset</string>
    <string name="notifications_options_text_settings">Notifications options</string>
    <string name="turn_on_off_text_settings">Turn on/off</string>
    <string name="on_text_settings">On</string>
    <string name="on2_text_settings">On</string>
    <string name="on3_text_settings">On</string>
    <string name="turn_on_off_outbid_text_settings">Turn on/off outbid</string>
    <string name="turn_on_off_api_errors_text_settings">Turn on/off API errors</string>
    <string name="notification_mode_text_settings">Notification mode</string>
    <string name="sound_text_settings">Sound</string>
    <string name="notification_delay_text_settings">Notification delay</string>
    <string name="_0_hours_text_settings">0 hours</string>
    <string name="application_options_text_settings">Application options</string>
    <string name="update_target_data_text_settings">Update targets data</string>
    <string name="update_text_settings">Update</string>
    <string name="clear_notifications_text_settings">Clear notifications</string>
    <string name="clear_text_settings">Clear</string>
    <string name="clear2_text_settings">Clear</string>
    <string name="clear_history_text_settings">Clear history</string>
    <string name="limit_of_notifications_text_settings">Limit of notifications</string>
    <string name="limit_of_history_text_settings">Limit of history</string>
    <string name="remove_all_statistics_text_settings">Remove all statistics</string>
    <string name="remove_text_settings">Remove</string>
    <string name="version_text_settings">Version</string>
    <string name="last_update_text_settings">Last update</string>
    <string name="follow_the_link_text_settings">Follow the link</string>
    <string name="disclaimer_text_settings">Disclaimer</string>
    <string name="open_text_settings">Open</string>
    <string name="open2_text_settings">Open</string>
    <string name="open3_text_settings">Open</string>
    <string name="other_text">Other</string>
    <string name="tech_support_text_settings">Tech support</string>
    <string name="send_report_text_settings">Send report</string>
    <string name="license_text_settings">License</string>
    <string name="license2_text">License</string>
    <string name="terms_of_use_and_privacy_policy_text_settings">Terms of Use and Privacy Policy</string>
    <string name="terms_of_use_and_privacy_policy_text">Terms of Use and Privacy Policy</string>
    <string name="change_api_text">Change API</string>
    <string name="change_api2_text">Change API</string>
    <string name="current_api_text">Current API</string>
    <string name="new_api_text">New API</string>
    <string name="enter_api_text">Enter API</string>
    <string name="apply_text">Apply</string>
    <string name="change_nickname_text">Change nickname</string>
    <string name="change_nickname2_text">Change nickname</string>
    <string name="current_nickname_text">Current nickname</string>
    <string name="new_nickname_text">New nickname</string>
    <string name="enter_nickname_text">Enter nickname</string>
    <string name="apply2_text">Apply</string>
    <string name="change_password_text">Change password</string>
    <string name="change_password2_text">Change password</string>
    <string name="current_password_text">Current password</string>
    <string name="new_password_text">New password</string>
    <string name="enter_password_text">Enter password</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="confirm_new_password_text">Confirm new password</string>
    <string name="please_write_password_text">Please, write password</string>
    <string name="please_write_correct_password_text">Please, write correct password</string>
    <string name="apply3_text">Apply</string>
    <string name="check_password_text">Check password</string>
    <string name="enter_current_password_text">Enter current password</string>
    <string name="check_password2_text">Check password</string>
    <string name="password_is_wrong_text">Password is wrong</string>
    <string name="continue_text">Continue</string>
    <string name="enter_current_password2_text">Enter current password</string>
    <string name="nickname3_text">Nickname</string>
    <string name="password3_text">Password</string>
    <string name="targets_statistic2_text">Targets statistic</string>
    <string name="general_text">General</string>
    <string name="current_targets3_text">Current targets</string>
    <string name="outbid_targets2_text">Outbid targets</string>
    <string name="all_targets_text">All targets</string>
    <string name="actions_with_account_text">Actions with account</string>
    <string name="valid_api_text">Valid API</string>
    <string name="valid_text">Valid</string>
    <string name="refresh_data_text">Refresh data</string>
    <string name="refresh_text">Refresh</string>
    <string name="remove_target_statistics_text">Remove target statistics</string>
    <string name="remove_text">Remove</string>
    <string name="exit_account2_text">Exit account</string>
    <string name="exit_text">Exit</string>
    <string name="delete_account2_text">Delete account</string>
    <string name="delete_text">Delete</string>
    <string name="ask_questions_text">Ask questions</string>
    <string name="ask_text">Ask</string>
    <string name="open_text">Open</string>
    <string name="open2_text">Open</string>
    <string name="clear_history_text">Clear history</string>
    <string name="do_you_really_want_to_clear_all_the_targets_history_text">Do you really want to clear all the targets history?</string>
    <string name="apply4_text">Apply</string>
    <string name="cancel_text">Cancel</string>
    <string name="clear_notifications_text">Clear notifications</string>
    <string name="do_you_really_want_to_clear_all_the_messages_you_received_text">Do you really want to clear all the notifications you received?</string>
    <string name="apply5_text">Apply</string>
    <string name="cancel2_text">Cancel</string>
    <string name="delete_account_text">Delete account</string>
    <string name="are_you_sure_you_want_to_delete_your_account_with_all_statistic_and_more_text">Are you sure you want to delete your account with all statistic and more?</string>
    <string name="apply6_text">Apply</string>
    <string name="cancel3_text">Cancel</string>
    <string name="exit_account_text">Exit account</string>
    <string name="do_you_want_to_exit_from_your_current_account_text">Do you want to exit from your current account?</string>
    <string name="apply7_text">Apply</string>
    <string name="cancel4_text">Cancel</string>
    <string name="remove_target_statistic_text">Remove target statistic</string>
    <string name="are_you_sure_you_want_to_remove_all_target_statistic_the_information_in_history_and_profile_text">Are you sure you want to remove all target statistic (the information in history and profile)?</string>
    <string name="apply8_text">Apply</string>
    <string name="cancel5_text">Cancel</string>
    <string name="remove_target_statistic2_text">Remove target statistic</string>
    <string name="are_you_sure_you_want_to_remove_the_target_statistic_all_the_time_text">Are you sure you want to remove the target statistic all the time?</string>
    <string name="apply9_text">Apply</string>
    <string name="cancel6_text">Cancel</string>
    <string name="reset_settings_text">Reset settings</string>
    <string name="are_you_sure_you_want_to_reset_the_app_settings_to_their_original_state_text">Are you sure you want to reset the app settings to their original state?</string>
    <string name="apply10_text">Apply</string>
    <string name="cancel7_text">Cancel</string>
    <string name="current_targets_text">Current targets</string>
    <string name="quick_menu_text">Quick menu</string>
    <string name="add_target_text">Add target</string>
    <string name="remove_target_text">Remove target</string>
    <string name="update_page_text">Update page</string>
    <string name="check_api_text">Check API</string>
    <string name="targets_statistic_text">Targets statistic</string>
    <string name="current_targets2_text">Current targets</string>
    <string name="active_text">Active</string>
    <string name="outbid_targets_text">Outbid targets</string>
    <string name="overbid_text">Overbid</string>
    <string name="all_time_targets_text">All time targets</string>
    <string name="all_text">All</string>
    <string name="log_in_text">Log in</string>
    <string name="to_start_using_the_app_you_need_to_paste_your_trading_api_key_into_the_field_below_follow_the_link_to_get_more_information_text">To start using the app, you need to paste your trading API key into the field below. Follow the link to get more information.</string>
    <string name="click_here_text">Click here</string>
    <string name="enter_data_text">Enter data</string>
    <string name="nickname_text">Nickname</string>
    <string name="please_enter_a_valid_nickname_text">Please enter a valid nickname</string>
    <string name="password_text">Password</string>
    <string name="please_enter_a_valid_password_text">Please enter a valid password</string>
    <string name="log_in2_text">Log in</string>
    <string name="don_t_have_an_account_text">Don\'t have an account?</string>
    <string name="create_an_account_text">Create an account</string>
    <string name="sing_up_text">Sign up</string>
    <string name="to_start_using_the_app_you_need_to_paste_your_trading_api_key_into_the_field_below_follow_the_link_to_get_more_information2_text">To start using the app, you need to paste your trading API key into the field below. Follow the link to get more information.</string>
    <string name="click_here2_text">Click here</string>
    <string name="enter_data2_text">Enter data</string>
    <string name="nickname2_text">Nickname</string>
    <string name="please_enter_a_nickname_text">Please enter a nickname</string>
    <string name="password2_text">Password</string>
    <string name="please_enter_a_password_text">Please enter a password</string>
    <string name="api_key_text">API key</string>
    <string name="please_enter_a_valid_api_key_text">Please enter a valid API key</string>
    <string name="i_ve_read_and_accept_with_the_terms_of_use_and_the_privacy_police_text">I\'ve read and accept with the Terms of Use and the Privacy Policy</string>
    <string name="sign_up_text">Sign up</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="log_in3_text">Log in</string>
    <string name="disclaimer_text">Disclaimer</string>
</resources>