<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/bottom_history"
        android:title="@string/history_text"
        android:icon="@drawable/icon_history"/>
    <item android:id="@+id/bottom_notification"
        android:title="@string/notification_text"
        android:icon="@drawable/icon_notification"/>
    <item android:id="@+id/bottom_home"
        android:title="@string/home_text"
        android:icon="@drawable/icon_home"/>
    <item android:id="@+id/bottom_settings"
        android:title="@string/settings_text"
        android:icon="@drawable/icon_settings"/>
    <item android:id="@+id/bottom_profile"
        android:title="@string/profile_text"
        android:icon="@drawable/icon_profile"/>
</menu>