<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17181A"
    tools:context=".view.ChangePassword">

    <View
        android:id="@+id/view13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_for_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView51"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/textView_current_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sora_medium"
        android:text="12345678"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view13"
        app:layout_constraintEnd_toEndOf="@+id/view13"
        app:layout_constraintStart_toStartOf="@+id/view13"
        app:layout_constraintTop_toTopOf="@+id/view13" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/noto_sans_nko_unjoined_medium"
        android:text="@string/current_password_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView_error_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/please_write_correct_password_text"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_confirm_password" />

    <EditText
        android:id="@+id/editText_confirm_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_for_edittext"
        android:ems="10"
        android:hint="@string/confirm_new_password_text"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView49"
        app:layout_constraintWidth_percent="0.75" />

    <View
        android:id="@+id/view17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1D1F20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sora_medium"
        android:text="@string/change_password_text"
        android:textColor="#FFFDFD"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view17"
        app:layout_constraintEnd_toEndOf="@+id/view17"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_back4"
        app:layout_constraintTop_toTopOf="@+id/view17" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/dela_gothic_one"
        android:text="@string/change_password2_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view17" />

    <ImageView
        android:id="@+id/imageView_back4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/view17"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintStart_toStartOf="@+id/view17"
        app:layout_constraintTop_toTopOf="@+id/view17"
        app:layout_constraintWidth_percent="0.11"
        app:srcCompat="@drawable/icons_left_arrow" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/noto_sans_nko_unjoined_medium"
        android:text="@string/new_password_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view13" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/noto_sans_nko_unjoined_medium"
        android:text="@string/confirm_password_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_error_password_change" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_for_button"
        android:fontFamily="@font/sora_medium"
        android:text="@string/apply3_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_error_password_confirm"
        app:layout_constraintWidth_percent="0.75" />

    <EditText
        android:id="@+id/editText_change_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_for_edittext"
        android:ems="10"
        android:hint="@string/enter_password_text"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView54"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/textView_error_password_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/please_write_password_text"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_change_password" />
</androidx.constraintlayout.widget.ConstraintLayout>